slideshow + text som uppdateras utifrån en array

--- a/test_slide.html
+++ b/test_slide.html
@@ -12,19 +12,19 @@
     <div class="slideContainer">
         <div class="Slide">
             <img src="artist_img/AmasonPress2020.jpeg" />
-            <div class="Caption">Photo 1</div>
+            <div class="text" id="text_1"></div>
         </div>
         <div class="Slide">
             <img src="artist_img/bennett.jpeg" />
-            <div class="Caption">Photo 2</div>
+            <div class="text" id="text_2"></div>
         </div>
         <div class="Slide">
             <img src="artist_img/Cherrie2FotoElleJonsson.jpg" />
-            <div class="Caption">Photo 3</div>
+            <div class="text" id="text_3"></div>
         </div>
         <div class="Slide">
             <img src="artist_img/el_perro.jpeg" />
-            <div class="Caption">Photo 4</div>
+            <div class="text" id="text_4"></div>
         </div>
         <a class="prevBtn">❮</a>
         <a class="nextBtn">❯</a>
@@ -38,6 +38,7 @@
     </div>
 
     <script src="main.js"></script>
+    <script src="slide_show.js"></script>
 </body>
 
 </html>
