Style för events sida samt html

--- a/events.html
+++ b/events.html
@@ -20,9 +20,19 @@
         <a href="admin.html">Admin</a>
       </div>
       <img src="AcmeImage/image.png" alt="" />
+      <div id="backdrop">
+      <p>*1* DATUM / ARTIST / PLATS / KATEGORI *1* </p>
+      <span class="backdrop_line"></span>
+      <p>*2* DATUM / ARTIST / PLATS / KATEGORI *2*</p>
+      <span class="backdrop_line"></span>
+      <p>*3* DATUM / ARTIST / PLATS / KATEGORI *3*</p>
+       </div>
     </div>
   </head>
   <body>
+    
+    
+
     <script src="main.js"></script>
   </body>
 </html>
