--- a/about.html
+++ b/about.html
@@ -22,7 +22,25 @@
       <img src="AcmeImage/image.png" alt="" />
     </div>
   </head>
+
+  <br>
+
+
+
   <body>
+
+    <div class="empty-div">
+      <br>
+    </div>
+
+  <div class="about-section">
+    
+    <h1>HUR VI ARBETAR MED SCRUM</h1>
+    <p>BLA</p> 
+    <p>BLA</p>
+    <p>BLA</p>
+  </div>
+
     <script src="main.js"></script>
   </body>
 </html>
