la till slide-html i home och css

--- a/admin.html
+++ b/admin.html
@@ -8,19 +8,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style_slide.css">
 
-    <div id="navbar">
-      <div id="navbarlinks">
-        <a href="events.html">Events</a>
-        <a href="about.html">About</a>
-        <a href="home.html">Home</a>
-        <a href="admin.html">Admin</a>
-      </div>
-        <img src="AcmeImage/image.png" alt="" />
-    </div>
+    
 </head>
 <body>
-    
+  <div id="navbar">
+    <div id="navbarlinks">
+      <a href="events.html">Events</a>
+      <a href="about.html">About</a>
+      <a href="home.html">Home</a>
+      <a href="admin.html">Admin</a>
+    </div>
+      <img src="AcmeImage/image.png" alt="" />
+  </div>
+   
     <script src="main.js"></script>
+   
 </body>
+
 </html>
