--- a/home.html
+++ b/home.html
@@ -1,30 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>ACME EVENTS</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap"
-      rel="stylesheet"
-    />
 
-    <link rel="stylesheet" href="style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>ACME EVENTS</title>
+  <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet" />
 
-    <div id="navbar">
-      <div id="navbarlinks">
-        <a href="events.html">Events</a>
-        <a href="about.html">About</a>
-        <a href="home.html">Home</a>
-        <a href="admin.html">Admin</a>
-      </div>
-      <img src="AcmeImage/image.png" alt="" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style_slide.css">
+
+
+</head>
+
+<body>
+  <div id="navbar">
+    <div id="navbarlinks">
+      <a href="events.html">Events</a>
+      <a href="about.html">About</a>
+      <a href="home.html">Home</a>
+      <a href="admin.html">Admin</a>
     </div>
-  </head>
+    <img src="AcmeImage/image.png" alt="" />
+  </div>
 
-  <body>
-    
-    <script src="main.js"></script>
-  </body>
+  <!-----------behållare för slides---------->
+  <div class="slideContainer">
+
+    <!-----------bild och text för varje slide--------->
+    <div class="slide">
+      <img src="artist_img/AmasonPress2020.jpeg" />
+
+      <div class="text" id="text_1"></div>
+    </div>
+    <div class="slide">
+      <img src="artist_img/bennett.jpeg" />
+
+      <div class="text" id="text_2"></div>
+    </div>
+    <div class="slide">
+      <img src="artist_img/Cherrie2FotoElleJonsson.jpg" />
+
+      <div class="text" id="text_3"></div>
+    </div>
+    <div class="slide">
+      <img src="artist_img/el_perro.jpeg" />
+
+      <div class="text" id="text_4"></div>
+    </div>
+
+    <!-----------pilar för att trycka fram och tillbaka---------->
+    <a class="prevBtn">❮</a>
+    <a class="nextBtn">❯</a>
+  </div>
+  <br />
+
+  <!-----------prickar som visar vilken slide vi är på---------->
+  <div class="dots">
+    <span class="navdot"></span>
+    <span class="navdot"></span>
+    <span class="navdot"></span>
+    <span class="navdot"></span>
+  </div>
+  <script src="main.js"></script>
+  <script src="slide_show.js"></script>
+</body>
+
 </html>
