--- a/about.html
+++ b/about.html
@@ -1,46 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>About</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap"
-      rel="stylesheet"
-    />
 
-    <link rel="stylesheet" href="style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>About</title>
+  <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet" />
 
-    <div id="navbar">
-      <div id="navbarlinks">
-        <a href="events.html">Events</a>
-        <a href="about.html">About</a>
-        <a href="home.html">Home</a>
-        <a href="admin.html">Admin</a>
-      </div>
-      <img src="AcmeImage/image.png" alt="" />
+  <link rel="stylesheet" href="style.css" />
+
+  <div id="navbar">
+    <div id="navbarlinks">
+      <a href="events.html">Events</a>
+      <a href="about.html">About</a>
+      <a href="home.html">Home</a>
+      <a href="admin.html">Admin</a>
     </div>
-  </head>
+    <img src="AcmeImage/image.png" alt="" />
+  </div>
+</head>
 
-  <br>
+<br>
 
 
 
-  <body>
+<body>
 
-    <div class="empty-div">
-      <br>
-    </div>
-
-  <div class="about-section">
-    
-    <h1>HUR VI ARBETAR MED SCRUM</h1>
-    <p>BLA</p> 
-    <p>BLA</p>
-    <p>BLA</p>
+  <div class="empty-div">
+    <br>
   </div>
 
-    <script src="main.js"></script>
-  </body>
+  <div class="about-section">
+
+    <h1>HUR VI ARBETAR</h1>
+    <p>Vi använder oss av agila metoden Scrum i vårt arbete.
+      <br>
+    <h4>Kort om scrum</h4>
+    - Våra projekt är uppdelade i korta iterationer, s.k. Sprintar.
+    <br>
+    - Ett Scrumteam är uppdelade i tre roller: Produktägare, Scrum Master och Utvecklingsteam.
+    <br>
+    - För att effektivisera arbetet upprätthåller vi en daglig dialog mellan våra utvecklare och kunder.
+    </p>
+  </div>
+
+  <script src="main.js"></script>
+</body>
+
 </html>
