--- a/about.html
+++ b/about.html
@@ -41,8 +41,11 @@
     <br>
     - Ett Scrumteam är uppdelade i tre roller: Produktägare, Scrum Master och Utvecklingsteam.
     <br>
-    - För att effektivisera arbetet upprätthåller vi en daglig dialog mellan våra utvecklare och kunder.
+    - För att effektivisera arbetet upprätthåller vi en tät dialog mellan våra utvecklare och kunder.
     </p>
+    <br>
+    
+    <img src="scrum.png" alt="scrum">
   </div>
 
   <script src="main.js"></script>
