Nu är container och dess innehåll jämnt

--- a/events.html
+++ b/events.html
@@ -21,11 +21,13 @@
       </div>
       <img src="AcmeImage/image.png" alt="" />
       <div id="backdrop">
-      <p>*1* DATUM / ARTIST / PLATS / KATEGORI *1* </p>
+        <div class="box1"><h1>Datum/artist/plats/kategori</h1></div>
       <span class="backdrop_line"></span>
-      <p>*2* DATUM / ARTIST / PLATS / KATEGORI *2*</p>
+      <div class="box1"><h1>Datum/artist/plats/kategori</h1></div>
       <span class="backdrop_line"></span>
-      <p>*3* DATUM / ARTIST / PLATS / KATEGORI *3*</p>
+      <div class="box1"><h1>Datum/artist/plats/kategori</h1></div>
+      <span class="backdrop_line"></span>
+      <div class="box1"><h1>Datum/artist/plats/kategori</h1></div>  
        </div>
     </div>
   </head>
