--- a/events.html
+++ b/events.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" href="style.css" />
 
+  </head>
+  <body>
     <div id="navbar">
       <div id="navbarlinks">
         <a href="events.html">Events</a>
@@ -21,8 +23,26 @@
       </div>
       <img src="AcmeImage/image.png" alt="" />
     </div>
-  </head>
-  <body>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <select id="sort">
+      <option value="" disabled selected>Sortera på:</option>
+      <option value="date">Datum</option>
+      <option value="genre">Kategori</option>
+    </select>
+
+    <select id="filter">
+    <option value="" disabled selected>Filtrera kategori </option>
+    <option value="Rock">Rock</option>
+    <option value="Hip-hop">Hip-hop</option>
+    <option value="Soul">Soul</option>
+    <option value="Pop">Pop</option>
+    </select>
     <script src="main.js"></script>
+    <script src="eventlist.js"></script>
+    <script src="slide_show.js"></script>
   </body>
 </html>
