--- a/events.html
+++ b/events.html
@@ -41,6 +41,10 @@
     <option value="Soul">Soul</option>
     <option value="Pop">Pop</option>
     </select>
+    <br>
+    <br>
+    <br>
+    <div id="backdrop"></div>
     <script src="main.js"></script>
     <script src="eventlist.js"></script>
     <script src="slide_show.js"></script>
