--- a/home.html
+++ b/home.html
@@ -65,6 +65,7 @@
   </div>
   <script src="main.js"></script>
   <script src="slide_show.js"></script>
+  <script src="eventlist.js"></script>
 </body>
 
 </html>
