skapade en till main javascript som hanterar det som ska göras av eventlist-klassen

--- a/events.html
+++ b/events.html
@@ -45,8 +45,8 @@
     <br>
     <br>
     <div id="backdrop"></div>
-    <script src="main.js"></script>
+    
+    <script src="main_events.js"></script>
     <script src="eventlist.js"></script>
-    <script src="slide_show.js"></script>
   </body>
 </html>
