små ändringar i dom flesta filerna

--- a/about.html
+++ b/about.html
@@ -45,7 +45,10 @@
     </p>
     <br>
     
-    <img src="scrum.png" alt="scrum">
+    <img src="scrum.png" alt="scrum" width="600" height="300">
+
+    
+
   </div>
 
   <script src="main.js"></script>
