--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@
     <br>
     <br>
     <br>
-    <br>
+  <div class="select_container">
     <select id="sort">
       <option value="" disabled selected>Sortera på:</option>
       <option value="date">Datum</option>
@@ -41,9 +41,8 @@
     <option value="Soul">Soul</option>
     <option value="Pop">Pop</option>
     </select>
-    <br>
-    <br>
-    <br>
+  </div>
+  
     <div id="backdrop"></div>
     
     <script src="main_events.js"></script>
