--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <title>About</title>
+  <link rel="shortcut icon" href="AcmeImage/Tabimage.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet" />
 
   <link rel="stylesheet" href="style.css" />
@@ -13,11 +14,13 @@
   <div id="navbar">
     <div id="navbarlinks">
       <a href="events.html">Events</a>
-      <a href="about.html">About</a>
       <a href="home.html">Home</a>
+      <a href="about.html">About</a>
       <a href="admin.html">Admin</a>
     </div>
-    <img src="AcmeImage/image.png" alt="" />
+    <a href="home.html">
+      <img src="AcmeImage/image.png" alt="" />
+    </a>
   </div>
 </head>
 
