--- a/admin.html
+++ b/admin.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Admin</title>
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="AcmeImage/Tabimage.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="style_slide.css">
-
-    
-</head>
-<body>
-  <div id="navbar">
-    <div id="navbarlinks">
-      <a href="events.html">Events</a>
-      <a href="about.html">About</a>
-      <a href="home.html">Home</a>
-      <a href="admin.html">Admin</a>
+    <link rel="stylesheet" href="style_slide.css" />
+  </head>
+  <body>
+    <div id="navbar">
+      <div id="navbarlinks">
+        <a href="events.html">Events</a>
+        <a href="home.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="admin.html">Admin</a>
+      </div>
+      <a href="home.html">
+        <img src="AcmeImage/image.png" alt="" />
+      </a>
     </div>
-      <img src="AcmeImage/image.png" alt="" />
-  </div>
-   
-    <script src="main.js"></script>
-   
-</body>
 
+    <script src="main.js"></script>
+  </body>
 </html>
