--- a/admin.html
+++ b/admin.html
@@ -27,6 +27,48 @@
       </a>
     </div>
 
-    <script src="main.js"></script>
+    <div id="admin">
+      <form id="admin_form">
+          <tr>
+          <label for="artist">Artist</label>
+          <br>
+          <input type="text" id="artist">
+      </tr>
+      <br>
+      <br>
+          <label for="venue">Venue</label>
+          <br>
+          <input type="text" id="venue">
+      </tr>
+      <br>
+      <br>
+      <tr>
+     
+          <label for="date" >Date</label>
+          <br>
+          <input type="text" id="date" placeholder="Jan 01 2020">
+      </tr>
+      <br>
+      <br>
+      <tr>
+          <label for="artist_bio">Artist bio</label>
+          <br>
+          <textarea name="" id="artist_bio" cols="30" rows="10"></textarea>
+      </tr>
+      <br>
+      <br>
+          <tr>
+          <button type="submit" id="submit">submit</button>
+      </tr>
+
+      </form>
+    </div>
+
+
+  <div id="adminEvents"></div>
+
+  <script src="script.js"></script>
+  <script src="event.js"></script>
+  <script src="store.js"></script>
   </body>
 </html>
