changed sixe: about

--- a/about.html
+++ b/about.html
@@ -36,10 +36,12 @@
 
   <div class="about-section">
 
-    <h1>HUR VI ARBETAR</h1>
-    <p>Vi använder oss av agila metoden Scrum i vårt arbete.
-      <br>
-    <h4>Kort om scrum</h4>
+    <h4>Vilka är vi?</h4>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+      Magni est veritatis repellendus vero blanditiis soluta voluptatibus explicabo aut cum ipsa.
+   
+    <h4>Hur vi jobbar?</h4>
+    <p>- Vi jobbar med Scrum 
     - Våra projekt är uppdelade i korta iterationer, s.k. Sprintar.
     <br>
     - Ett Scrumteam är uppdelade i tre roller: Produktägare, Scrum Master och Utvecklingsteam.
@@ -48,7 +50,7 @@
     </p>
     <br>
     
-    <img src="scrum.png" alt="scrum" width="600" height="300">
+    <img src="scrum.png" alt="scrum" width="400" height="200">
 
     
 
