testar remove-funktion

--- a/events.html
+++ b/events.html
@@ -46,5 +46,7 @@
 
     <script src="main_events.js"></script>
     <script src="eventlist.js"></script>
+    <script src="store.js"></script>
+  
   </body>
 </html>
