fixat remove och update crude

--- a/admin.html
+++ b/admin.html
@@ -51,6 +51,22 @@
       <br>
       <br>
       <tr>
+     
+        <label for="genre" >Genre</label>
+        <br>
+        <input type="text" id="genre">
+    </tr>
+    <br>
+      <br>
+      <tr>
+     
+        <label for="link" >Link</label>
+        <br>
+        <input type="text" id="link">
+    </tr>
+    <br>
+    <br>
+      <tr>
           <label for="artist_bio">Artist bio</label>
           <br>
           <textarea name="" id="artist_bio" cols="30" rows="10"></textarea>
@@ -59,6 +75,7 @@
       <br>
           <tr>
           <button type="submit" id="submit">submit</button>
+          <button type="submit" id="submit_edit" class = "hide">submit-edit</button>
       </tr>
 
       </form>
