--- a/detail.html
+++ b/detail.html
@@ -1,56 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Events</title>
-    <link rel="shortcut icon" href="AcmeImage/Tabimage.ico" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <div id="navbar">
-      <div id="navbarlinks">
-        <a href="events.html">Events</a>
-        <a href="home.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="admin.html">Admin</a>
-      </div>
-      <a href="home.html">
-        <img src="AcmeImage/image.png" alt="" />
-      </a>
-    </div>
-  </head>
-  <body>
-    <div id="detailbody">
-      <img src="artist_img/maggio.jpg" alt="" />
-      <div id="artistbio">
-        <p>
-          2019 and Veronica Maggio is undeniably Swedens queen of pop since many
-          years, and the biggest local artist. Despite lyrics sung in Swedish, a
-          language spoken by no more than 10 million, Veronicas songs have
-          managed to stream upwards of 700 million (!) times on Spotify.
-          Veronica first showed up on the Swedish music scene in 2006 with her
-          debut single “Dumpa Mig” (break up with me), one could sense that
-          something unique was taking shape. Her style of lyric-writing was
-          significantly different from the tradition of swedish pop lyrics up to
-          date. A sort of “write about what you see”-perspective based on
-          herself, her childhood and not so seldom about her shortcomings. Pop
-          music with huge choruses but revealing a darkness.
-        </p>
 
-        <label for="">Datum: 20 / 10 / 2020</label>
-        <label for="">Artist: Veronica Maggio</label>
-        <label for="">Plats: Stockholm, Globen</label> <br />
-        <br />
-        <label for="">Genre: Pop</label>
-        <label for="">Gästbok: </label>
-        <a
-          href="https://www.ticketmaster.se/artist/veronica-maggio-biljetter/872127"
-          >Biljetter till Veronica Maggio</a
-        >
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Events</title>
+  <link rel="shortcut icon" href="AcmeImage/Tabimage.ico" />
+  <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <div id="navbar">
+    <div id="navbarlinks">
+      <a href="events.html">Events</a>
+      <a href="home.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="admin.html">Admin</a>
     </div>
-  </body>
+    <a href="home.html">
+      <img src="AcmeImage/image.png" alt="" />
+    </a>
+  </div>
+</head>
+
+<body>
+  <div id="detailbody">
+    <img src="artist_img/maggio.jpg" alt="" />
+    <div id="artistbio">
+      <p>
+        2019 and Veronica Maggio is undeniably Swedens queen of pop since many
+        years, and the biggest local artist. Despite lyrics sung in Swedish, a
+        language spoken by no more than 10 million, Veronicas songs have
+        managed to stream upwards of 700 million (!) times on Spotify.
+        Veronica first showed up on the Swedish music scene in 2006 with her
+        debut single “Dumpa Mig” (break up with me), one could sense that
+        something unique was taking shape. Her style of lyric-writing was
+        significantly different from the tradition of swedish pop lyrics up to
+        date. A sort of “write about what you see”-perspective based on
+        herself, her childhood and not so seldom about her shortcomings. Pop
+        music with huge choruses but revealing a darkness.
+      </p>
+
+      <label for="">Datum: 20 / 10 / 2020</label>
+      <label for="">Artist: Veronica Maggio</label>
+      <label for="">Plats: Stockholm, Globen</label> <br />
+      <br />
+      <label for="">Genre: Pop</label>
+
+      <a href="https://www.ticketmaster.se/artist/veronica-maggio-biljetter/872127">Biljetter till Veronica Maggio</a>
+    </div>
+  </div>
+</body>
+
 </html>
