fixade dropdown i admin

--- a/admin.html
+++ b/admin.html
@@ -52,9 +52,15 @@
       <br>
       <tr>
      
-        <label for="genre" >Genre</label>
+        <label for="genre">Genre</label>
         <br>
-        <input type="text" id="genre">
+        <select id="genre">
+          <option value="" disabled selected>Välj genre</option>
+          <option value="Rock">Rock</option>
+          <option value="Hip-hop">Hip-hop</option>
+          <option value="Soul">Soul</option>
+          <option value="Pop">Pop</option>
+        </select>
     </tr>
     <br>
       <br>
