fixade datum-input i admin

--- a/admin.html
+++ b/admin.html
@@ -46,7 +46,7 @@
      
           <label for="date" >Date</label>
           <br>
-          <input type="text" id="date" placeholder="Jan 01 2020">
+          <input type="date" id="date">
       </tr>
       <br>
       <br>
