aktiva länkar ändrar färg

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <div id="navbarlinks">
       <a href="home.html">Home</a>
       <a href="events.html">Events</a>
-      <a href="about.html">About</a>
+      <a style="color: #74d14c" href="about.html">About</a>
       <a href="admin.html">Admin</a>
     </div>
     <a href="home.html">
