--- a/admin.html
+++ b/admin.html
@@ -20,7 +20,7 @@
         <a href="home.html">Home</a>
         <a href="events.html">Events</a>
         <a href="about.html">About</a>
-        <a href="admin.html">Admin</a>
+        <a style="color: #74d14c" href="admin.html">Admin</a>
       </div>
       <a href="home.html">
         <img src="AcmeImage/image.png" alt="" />
