--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
   <body>
     <div id="navbar">
       <div id="navbarlinks">
-        <a href="home.html">Home</a>
+        <a style="color: #74d14c" href="home.html">Home</a>
         <a href="events.html">Events</a>
         <a href="about.html">About</a>
         <a href="admin.html">Admin</a>
