--- a/events.html
+++ b/events.html
@@ -17,7 +17,7 @@
     <div id="navbar">
       <div id="navbarlinks">
         <a href="home.html">Home</a>
-        <a href="events.html">Events</a>
+        <a style="color: #74d14c" href="events.html">Events</a>
         <a href="about.html">About</a>
         <a href="admin.html">Admin</a>
       </div>
