svengelska till engelska

--- a/admin.html
+++ b/admin.html
@@ -46,7 +46,7 @@
      
           <label for="date" >Date</label>
           <br>
-          <input type="date" id="date" class="input">
+          <input type="text" id="date" class="input" placeholder="Jan 01 2021">
       </tr>
       <br>
       <br>
@@ -55,7 +55,7 @@
         <label for="genre">Genre</label>
         <br>
         <select id="genre" class="input">
-          <option value="" disabled selected>Välj genre</option>
+          <option value="" disabled selected>Choose</option>
           <option value="Rock">Rock</option>
           <option value="Hip-hop">Hip-hop</option>
           <option value="Soul">Soul</option>
