--- a/detail.html
+++ b/detail.html
@@ -39,13 +39,12 @@
         music with huge choruses but revealing a darkness.
       </p>
 
-      <label for="">Datum: 20 / 10 / 2020</label>
+      <label for="">Date: 20 | 10 | 2020</label>
       <label for="">Artist: Veronica Maggio</label>
-      <label for="">Plats: Stockholm, Globen</label> <br />
-      <br />
-      <label for="">Genre: Pop</label>
+      <label for="">Venue: Stockholm, Globen</label> <br />
+     <br>
 
-      <a href="https://www.ticketmaster.se/artist/veronica-maggio-biljetter/872127">Biljetter till Veronica Maggio</a>
+      <a href="https://www.ticketmaster.se/artist/veronica-maggio-biljetter/872127">Tickets</a>
     </div>
   </div>
 </body>
