--- a/events.html
+++ b/events.html
@@ -28,13 +28,13 @@
 
     <div id="filtrera">
       <select id="sort">
-        <option value="" disabled selected>Sortera på:</option>
-        <option value="date">Datum</option>
-        <option value="genre">Kategori</option>
+        <option value="" disabled selected>Sort:</option>
+        <option value="date">Date</option>
+        <option value="genre">Category</option>
       </select>
 
       <select id="filter">
-        <option value="" disabled selected>Filtrera kategori</option>
+        <option value="" disabled selected>Filter</option>
         <option value="Rock">Rock</option>
         <option value="Hip-hop">Hip-hop</option>
         <option value="Soul">Soul</option>
