--- a/events.html
+++ b/events.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Events</title>
-    <link rel="shortcut icon" href="AcmeImage/Tabimage.ico" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap"
-      rel="stylesheet"
-    />
 
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="navbar">
-      <div id="navbarlinks">
-        <a href="home.html">Home</a>
-        <a style="color: #74d14c" href="events.html">Events</a>
-        <a href="about.html">About</a>
-        <a href="admin.html">Admin</a>
-      </div>
-      <a href="home.html">
-        <img src="AcmeImage/image.png" alt="" />
-      </a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Events</title>
+  <link rel="shortcut icon" href="AcmeImage/Tabimage.ico" />
+  <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet" />
+
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div id="navbar">
+    <div id="navbarlinks">
+      <a href="home.html">Home</a>
+      <a style="color: #74d14c" href="events.html">Events</a>
+      <a href="about.html">About</a>
+      <a href="admin.html">Admin</a>
     </div>
+    <a href="home.html">
+      <img src="AcmeImage/image.png" alt="" />
+    </a>
+  </div>
 
-    <div id="filtrera">
-      <select id="sort">
-        <option value="" disabled selected>Sort:</option>
-        <option value="date">Date</option>
-        <option value="genre">Category</option>
-      </select>
+  <div id="filtrera">
+    <select id="sort">
+      <option value="" disabled selected>Sort:</option>
+      <option value="date">Date</option>
+      <option value="genre">Category</option>
+    </select>
 
-      <select id="filter">
-        <option value="" disabled selected>Filter</option>
-        <option value="Rock">Rock</option>
-        <option value="Hip-hop">Hip-hop</option>
-        <option value="Soul">Soul</option>
-        <option value="Pop">Pop</option>
-      </select>
-    </div>
-  
-    <div id="backdrop"></div>
+    <select id="filter">
+      <option value="" disabled selected>Filter</option>
+      <option value="Rock">Rock</option>
+      <option value="Hip-hop">Hip-hop</option>
+      <option value="Soul">Soul</option>
+      <option value="Pop">Pop</option>
+    </select>
+  </div>
 
-    <script src="main_events.js"></script>
-    <script src="eventlist.js"></script>
-    <script src="store.js"></script>
-  
-  </body>
+  <div id="backdrop"></div>
+
+  <script src="main_events.js"></script>
+  <script src="eventlist.js"></script>
+  <script src="store.js"></script>
+
+</body>
+
 </html>
